--- a/test-output/index.html
+++ b/test-output/index.html
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Opencart_App_Test_Sanity_Suite" class="navigator-link">
-              <span class="suite-name border-skipped">Opencart App Test Sanity Suite</span>
+              <span class="suite-name border-passed">Opencart App Test Sanity Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,36 +92,36 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,  4 skipped,  </span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title skipped">Skipped methods</span>
-                    <span class="show-or-hide-methods skipped">
-                      <a href="#" panel-name="suite-Opencart_App_Test_Sanity_Suite" class="hide-methods skipped suite-Opencart_App_Test_Sanity_Suite"> (hide)</a> <!-- hide-methods skipped suite-Opencart_App_Test_Sanity_Suite -->
-                      <a href="#" panel-name="suite-Opencart_App_Test_Sanity_Suite" class="show-methods skipped suite-Opencart_App_Test_Sanity_Suite"> (show)</a> <!-- show-methods skipped suite-Opencart_App_Test_Sanity_Suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Opencart_App_Test_Sanity_Suite" class="hide-methods passed suite-Opencart_App_Test_Sanity_Suite"> (hide)</a> <!-- hide-methods passed suite-Opencart_App_Test_Sanity_Suite -->
+                      <a href="#" panel-name="suite-Opencart_App_Test_Sanity_Suite" class="show-methods passed suite-Opencart_App_Test_Sanity_Suite"> (show)</a> <!-- show-methods passed suite-Opencart_App_Test_Sanity_Suite -->
                     </span>
-                    <div class="method-list-content skipped suite-Opencart_App_Test_Sanity_Suite">
+                    <div class="method-list-content passed suite-Opencart_App_Test_Sanity_Suite">
                       <span>
-                        <img src="skipped.png" width="3%"/>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Opencart_App_Test_Sanity_Suite" title="com.qa.opencart.tests.LoginPageTest" class="method navigator-link" hash-for-method="doLoginTest">doLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="skipped.png" width="3%"/>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Opencart_App_Test_Sanity_Suite" title="com.qa.opencart.tests.LoginPageTest" class="method navigator-link" hash-for-method="forgotPasswordLinkExistTest">forgotPasswordLinkExistTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="skipped.png" width="3%"/>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Opencart_App_Test_Sanity_Suite" title="com.qa.opencart.tests.LoginPageTest" class="method navigator-link" hash-for-method="loginPageTitleTest">loginPageTitleTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="skipped.png" width="3%"/>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Opencart_App_Test_Sanity_Suite" title="com.qa.opencart.tests.LoginPageTest" class="method navigator-link" hash-for-method="loginPageURLTest">loginPageURLTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content skipped suite-Opencart_App_Test_Sanity_Suite -->
+                    </div> <!-- method-list-content passed suite-Opencart_App_Test_Sanity_Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -133,9 +133,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Opencart_App_Test_Sanity_Suite" class="panel Opencart_App_Test_Sanity_Suite">
-          <div class="suite-Opencart_App_Test_Sanity_Suite-class-skipped">
+          <div class="suite-Opencart_App_Test_Sanity_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="skipped.png"/>
+              <img src="passed.png"/>
               <span class="class-name">com.qa.opencart.tests.LoginPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -144,29 +144,6 @@
                   <a name="doLoginTest">
                   </a> <!-- doLoginTest -->
                   <span class="method-name">doLoginTest</span>
-                  <div class="stack-trace">java.lang.NullPointerException: inStream parameter is null
-	at java.base/java.util.Objects.requireNonNull(Objects.java:246)
-	at java.base/java.util.Properties.load(Properties.java:409)
-	at com.qa.opencart.factory.DriverFactory.initProp(DriverFactory.java:114)
-	at com.qa.opencart.base.BaseTest.setup(BaseTest.java:47)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethodConsideringTimeout(MethodInvocationHelper.java:69)
-	at org.testng.internal.invokers.ConfigInvoker.invokeConfigurationMethod(ConfigInvoker.java:361)
-	at org.testng.internal.invokers.ConfigInvoker.invokeConfigurations(ConfigInvoker.java:296)
-	at org.testng.TestRunner.invokeTestConfigurations(TestRunner.java:644)
-	at org.testng.TestRunner.beforeRun(TestRunner.java:633)
-	at org.testng.TestRunner.run(TestRunner.java:595)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:437)
-	at org.testng.SuiteRunner$SuiteWorker.run(SuiteRunner.java:475)
-	at org.testng.internal.thread.ThreadUtil.lambda$execute$0(ThreadUtil.java:58)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1575)
-
-</div> <!-- stack-trace -->
                   <em>
 (login with valid credentials)                  </em>
                 </div> <!-- method-content -->
@@ -176,29 +153,6 @@
                   <a name="forgotPasswordLinkExistTest">
                   </a> <!-- forgotPasswordLinkExistTest -->
                   <span class="method-name">forgotPasswordLinkExistTest</span>
-                  <div class="stack-trace">java.lang.NullPointerException: inStream parameter is null
-	at java.base/java.util.Objects.requireNonNull(Objects.java:246)
-	at java.base/java.util.Properties.load(Properties.java:409)
-	at com.qa.opencart.factory.DriverFactory.initProp(DriverFactory.java:114)
-	at com.qa.opencart.base.BaseTest.setup(BaseTest.java:47)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethodConsideringTimeout(MethodInvocationHelper.java:69)
-	at org.testng.internal.invokers.ConfigInvoker.invokeConfigurationMethod(ConfigInvoker.java:361)
-	at org.testng.internal.invokers.ConfigInvoker.invokeConfigurations(ConfigInvoker.java:296)
-	at org.testng.TestRunner.invokeTestConfigurations(TestRunner.java:644)
-	at org.testng.TestRunner.beforeRun(TestRunner.java:633)
-	at org.testng.TestRunner.run(TestRunner.java:595)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:437)
-	at org.testng.SuiteRunner$SuiteWorker.run(SuiteRunner.java:475)
-	at org.testng.internal.thread.ThreadUtil.lambda$execute$0(ThreadUtil.java:58)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1575)
-
-</div> <!-- stack-trace -->
                   <em>
 (forgotPasswordLinkExistTest)                  </em>
                 </div> <!-- method-content -->
@@ -208,29 +162,6 @@
                   <a name="loginPageTitleTest">
                   </a> <!-- loginPageTitleTest -->
                   <span class="method-name">loginPageTitleTest</span>
-                  <div class="stack-trace">java.lang.NullPointerException: inStream parameter is null
-	at java.base/java.util.Objects.requireNonNull(Objects.java:246)
-	at java.base/java.util.Properties.load(Properties.java:409)
-	at com.qa.opencart.factory.DriverFactory.initProp(DriverFactory.java:114)
-	at com.qa.opencart.base.BaseTest.setup(BaseTest.java:47)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethodConsideringTimeout(MethodInvocationHelper.java:69)
-	at org.testng.internal.invokers.ConfigInvoker.invokeConfigurationMethod(ConfigInvoker.java:361)
-	at org.testng.internal.invokers.ConfigInvoker.invokeConfigurations(ConfigInvoker.java:296)
-	at org.testng.TestRunner.invokeTestConfigurations(TestRunner.java:644)
-	at org.testng.TestRunner.beforeRun(TestRunner.java:633)
-	at org.testng.TestRunner.run(TestRunner.java:595)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:437)
-	at org.testng.SuiteRunner$SuiteWorker.run(SuiteRunner.java:475)
-	at org.testng.internal.thread.ThreadUtil.lambda$execute$0(ThreadUtil.java:58)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1575)
-
-</div> <!-- stack-trace -->
                   <em>
 (checking login title)                  </em>
                 </div> <!-- method-content -->
@@ -240,35 +171,12 @@
                   <a name="loginPageURLTest">
                   </a> <!-- loginPageURLTest -->
                   <span class="method-name">loginPageURLTest</span>
-                  <div class="stack-trace">java.lang.NullPointerException: inStream parameter is null
-	at java.base/java.util.Objects.requireNonNull(Objects.java:246)
-	at java.base/java.util.Properties.load(Properties.java:409)
-	at com.qa.opencart.factory.DriverFactory.initProp(DriverFactory.java:114)
-	at com.qa.opencart.base.BaseTest.setup(BaseTest.java:47)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:139)
-	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethodConsideringTimeout(MethodInvocationHelper.java:69)
-	at org.testng.internal.invokers.ConfigInvoker.invokeConfigurationMethod(ConfigInvoker.java:361)
-	at org.testng.internal.invokers.ConfigInvoker.invokeConfigurations(ConfigInvoker.java:296)
-	at org.testng.TestRunner.invokeTestConfigurations(TestRunner.java:644)
-	at org.testng.TestRunner.beforeRun(TestRunner.java:633)
-	at org.testng.TestRunner.run(TestRunner.java:595)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:437)
-	at org.testng.SuiteRunner$SuiteWorker.run(SuiteRunner.java:475)
-	at org.testng.internal.thread.ThreadUtil.lambda$execute$0(ThreadUtil.java:58)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:317)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1144)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:642)
-	at java.base/java.lang.Thread.run(Thread.java:1575)
-
-</div> <!-- stack-trace -->
                   <em>
 (checking login page Url)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Opencart_App_Test_Sanity_Suite-class-skipped -->
+          </div> <!-- suite-Opencart_App_Test_Sanity_Suite-class-passed -->
         </div> <!-- panel Opencart_App_Test_Sanity_Suite -->
         <div panel-name="test-xml-Opencart_App_Test_Sanity_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -324,26 +232,26 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginPageURLTest')
+data.setCell(0, 1, 'doLoginTest')
 data.setCell(0, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(0, 3, 0);
+data.setCell(0, 3, 3317);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'forgotPasswordLinkExistTest')
 data.setCell(1, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(1, 3, 0);
+data.setCell(1, 3, 747);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'doLoginTest')
+data.setCell(2, 1, 'loginPageTitleTest')
 data.setCell(2, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(2, 3, 0);
+data.setCell(2, 3, 80);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'loginPageTitleTest')
+data.setCell(3, 1, 'loginPageURLTest')
 data.setCell(3, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(3, 3, 0);
+data.setCell(3, 3, 48);
 window.suiteTableData['Opencart_App_Test_Sanity_Suite']= { tableData: data, tableDiv: 'times-div-Opencart_App_Test_Sanity_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 585 ms</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-Opencart_App_Test_Sanity_Suite">
               </div> <!-- times-div-Opencart_App_Test_Sanity_Suite -->
             </div> <!-- times-div -->
@@ -371,46 +279,44 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">setup(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">forgotPasswordLinkExistTest</span>
-                <span class="method-start">426 ms</span>
+                <span class="method-start">6659 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">attachScreenshot</span>
-                <span class="method-start">444 ms</span>
+                <span class="method-name">attachScreenshot([TestResult name=forgotPasswordLinkExistTest status=SUCCESS method=LoginPageTest.forgotPasswordLinkE...)</span>
+                <span class="method-start">7593 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">loginPageTitleTest</span>
-                <span class="method-start">480 ms</span>
+                <span class="method-start">7630 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">attachScreenshot</span>
-                <span class="method-start">493 ms</span>
+                <span class="method-name">attachScreenshot([TestResult name=loginPageTitleTest status=SUCCESS method=LoginPageTest.loginPageTitleTest()[pri:0, ...)</span>
+                <span class="method-start">7710 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">loginPageURLTest</span>
-                <span class="method-start">501 ms</span>
+                <span class="method-start">7725 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">attachScreenshot</span>
-                <span class="method-start">514 ms</span>
+                <span class="method-name">attachScreenshot([TestResult name=loginPageURLTest status=SUCCESS method=LoginPageTest.loginPageURLTest()[pri:0, inst...)</span>
+                <span class="method-start">7789 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">doLoginTest</span>
-                <span class="method-start">523 ms</span>
+                <span class="method-start">7800 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">attachScreenshot</span>
-                <span class="method-start">536 ms</span>
+                <span class="method-name">attachScreenshot([TestResult name=doLoginTest status=SUCCESS method=LoginPageTest.doLoginTest()[pri:32767, instance:c...)</span>
+                <span class="method-start">11123 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">544 ms</span>
+                <span class="method-start">11131 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
