--- a/test-output/old/Opencart App Test Sanity Suite/methods-alphabetical.html
+++ b/test-output/old/Opencart App Test Sanity Suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Opencart App Test Sanity Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ddd475">  <td>25/05/23 16:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@7fbd3e75]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ddd475">  <td>25/05/23 16:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@7fbd3e75]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ddd475">  <td>25/05/23 16:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@7fbd3e75]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="ddd475">  <td>25/05/23 16:42:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@7fbd3e75]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="667682">  <td>25/05/23 16:42:37</td>   <td>-15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@7fbd3e75]">doLoginTest</td> 
-  <td>TestNG-tests-1@594207037</td>   <td></td> </tr>
-<tr bgcolor="667682">  <td>25/05/23 16:42:37</td>   <td>-113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@7fbd3e75]">forgotPasswordLinkExistTest</td> 
-  <td>TestNG-tests-1@594207037</td>   <td></td> </tr>
-<tr bgcolor="667682">  <td>25/05/23 16:42:37</td>   <td>-58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@7fbd3e75]">loginPageTitleTest</td> 
-  <td>TestNG-tests-1@594207037</td>   <td></td> </tr>
-<tr bgcolor="667682">  <td>25/05/23 16:42:37</td>   <td>-37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@7fbd3e75]">loginPageURLTest</td> 
-  <td>TestNG-tests-1@594207037</td>   <td></td> </tr>
-<tr bgcolor="ddd475">  <td>25/05/23 16:42:37</td>   <td>-493</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@7fbd3e75]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@594207037</td>   <td></td> </tr>
-<tr bgcolor="ddd475">  <td>25/05/23 16:42:37</td>   <td>8</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@7fbd3e75]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="b7f6b2">  <td>25/05/23 17:02:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@9b47400]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@893339434</td>   <td></td> </tr>
+<tr bgcolor="b7f6b2">  <td>25/05/23 17:02:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@9b47400]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@893339434</td>   <td></td> </tr>
+<tr bgcolor="b7f6b2">  <td>25/05/23 17:02:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@9b47400]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@893339434</td>   <td></td> </tr>
+<tr bgcolor="b7f6b2">  <td>25/05/23 17:02:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@9b47400]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@893339434</td>   <td></td> </tr>
+<tr bgcolor="efb791">  <td>25/05/23 17:02:23</td>   <td>-3323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@9b47400]">doLoginTest</td> 
+  <td>TestNG-tests-1@893339434</td>   <td></td> </tr>
+<tr bgcolor="efb791">  <td>25/05/23 17:02:21</td>   <td>-4464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPasswordLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@9b47400]">forgotPasswordLinkExistTest</td> 
+  <td>TestNG-tests-1@893339434</td>   <td></td> </tr>
+<tr bgcolor="efb791">  <td>25/05/23 17:02:22</td>   <td>-3493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@9b47400]">loginPageTitleTest</td> 
+  <td>TestNG-tests-1@893339434</td>   <td></td> </tr>
+<tr bgcolor="efb791">  <td>25/05/23 17:02:23</td>   <td>-3398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@9b47400]">loginPageURLTest</td> 
+  <td>TestNG-tests-1@893339434</td>   <td></td> </tr>
+<tr bgcolor="b7f6b2">  <td>25/05/23 17:02:15</td>   <td>-11089</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@9b47400]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@893339434</td>   <td></td> </tr>
+<tr bgcolor="b7f6b2">  <td>25/05/23 17:02:26</td>   <td>13</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@9b47400]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@893339434</td>   <td></td> </tr>
 </table>
